--- a/Form/Layout.css
+++ b/Form/Layout.css
@@ -14,25 +14,14 @@ body, html {
     font-size: 14px;
     line-height: 1.42857;
     background-color: #eee;
-
 }
 form {
-    /*margin-left: 500px;
-    width: 400px;*/
     background-color: #fff;
     border: 1px solid lightgrey;
     border-radius: 4px;
-
 }
 h2 {
     text-align: center;
-    /*margin-bottom: 10px;
-    margin-top: 20px;
-    margin-left: 150px;
-    font-family: inherit;
-    font-weight: lighter;
-    line-height: 1.1;
-    font-size: 30px;*/
 }
 .btn-primary {
     border: 1px solid #DB5705;
@@ -44,17 +33,13 @@ h2 {
     overflow: hidden;
     box-shadow: 5px 5px 10px #ddd;
 }
-P {
-    text-align: center;
-    font-style: italic;
-}
-#bienvenue {
-    text-align: left;
-    font-style: italic;
-    font-size: 1.5em;
-}
-
-.btn-primary:hover {
+.btn-primary:hover, .btn-primary:focus {
     background-color: #cc5400;
     border-color: #662a00;
+}
+.form-control:focus {
+    border-color: #ff6900;
+    outline: 0;
+    /*   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);*/
+    /* box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6); */
 }
